[gd_scene load_steps=4 format=3 uid="uid://ciupgv0lgyibr"]

[ext_resource type="Script" path="res://scenes/lineLayer.gd" id="1_4njhg"]
[ext_resource type="Theme" uid="uid://cmi0hfgatqxeb" path="res://theme.tres" id="1_jjvqd"]

[sub_resource type="ViewportTexture" id="ViewportTexture_lomwt"]

[node name="LineLayer" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 115)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1020.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_jjvqd")
script = ExtResource("1_4njhg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(5, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0

[node name="fileNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Line"
vertical_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="startPointContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="startLabel" type="Label" parent="HBoxContainer/startPointContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Start"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/startPointContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="xLabel" type="Label" parent="HBoxContainer/startPointContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "x"
vertical_alignment = 1

[node name="startPointXEdit" type="LineEdit" parent="HBoxContainer/startPointContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "15"
alignment = 1
max_length = 3
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/startPointContainer/HBoxContainer"]
layout_mode = 2

[node name="startPointXSlider" type="HSlider" parent="HBoxContainer/startPointContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
max_value = 400.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/startPointContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="yLabel" type="Label" parent="HBoxContainer/startPointContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "y"
vertical_alignment = 1

[node name="startPointYEdit" type="LineEdit" parent="HBoxContainer/startPointContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "15"
alignment = 1
max_length = 3
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/startPointContainer/HBoxContainer2"]
layout_mode = 2

[node name="startPointYSlider" type="HSlider" parent="HBoxContainer/startPointContainer/HBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
max_value = 240.0

[node name="endPointContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="endLabel" type="Label" parent="HBoxContainer/endPointContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "End"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/endPointContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="xLabel" type="Label" parent="HBoxContainer/endPointContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "x"
vertical_alignment = 1

[node name="endPointXEdit" type="LineEdit" parent="HBoxContainer/endPointContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "15"
alignment = 1
max_length = 3
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/endPointContainer/HBoxContainer"]
layout_mode = 2

[node name="endPointXSlider" type="HSlider" parent="HBoxContainer/endPointContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
max_value = 400.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/endPointContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="yLabel" type="Label" parent="HBoxContainer/endPointContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "y"
vertical_alignment = 1

[node name="endPointYEdit" type="LineEdit" parent="HBoxContainer/endPointContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "15"
alignment = 1
max_length = 3
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/endPointContainer/HBoxContainer2"]
layout_mode = 2

[node name="endPointYSlider" type="HSlider" parent="HBoxContainer/endPointContainer/HBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
max_value = 240.0

[node name="exportButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 11
text = "Export"
icon = SubResource("ViewportTexture_lomwt")

[node name="xButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 11
text = "X"

[connection signal="text_submitted" from="HBoxContainer/startPointContainer/HBoxContainer/startPointXEdit" to="." method="setStartPointX"]
[connection signal="value_changed" from="HBoxContainer/startPointContainer/HBoxContainer/CenterContainer/startPointXSlider" to="." method="setStartPointX"]
[connection signal="text_submitted" from="HBoxContainer/startPointContainer/HBoxContainer2/startPointYEdit" to="." method="setStartPointY"]
[connection signal="value_changed" from="HBoxContainer/startPointContainer/HBoxContainer2/CenterContainer/startPointYSlider" to="." method="setStartPointY"]
[connection signal="text_submitted" from="HBoxContainer/endPointContainer/HBoxContainer/endPointXEdit" to="." method="setEndPointX"]
[connection signal="value_changed" from="HBoxContainer/endPointContainer/HBoxContainer/CenterContainer/endPointXSlider" to="." method="setEndPointX"]
[connection signal="text_submitted" from="HBoxContainer/endPointContainer/HBoxContainer2/endPointYEdit" to="." method="setEndPointY"]
[connection signal="value_changed" from="HBoxContainer/endPointContainer/HBoxContainer2/CenterContainer/endPointYSlider" to="." method="setEndPointY"]
[connection signal="pressed" from="HBoxContainer/exportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="HBoxContainer/xButton" to="." method="_on_x_button_pressed"]
